# surfacing-mining

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  SE_MANIFEST.toml  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/agents/: Ask.agent.md  Explore.agent.md  Plan.agent.md
.github/workflows/: ci-python-zensical.yml  deploy-zensical.yml
data/profiles/: README.md  copper_sulfide_hardrock.toml  helium_gas.toml
data/projects/: README.md
data/projects/copper_sulfide_mn/: evidence.toml  exposures.toml  notes.md  project.toml  value_flows.toml
data/projects/copper_sulfide_mn/geospatial/: downstream_path.geojson  laurentian_divide.geojson  protected_areas.geojson  site.geojson  watershed.geojson
data/projects/helium_mn/: evidence.toml  exposures.toml  notes.md  project.toml  value_flows.toml
data/projects/helium_mn/geospatial/: downstream_path.geojson  laurentian_divide.geojson  protected_areas.geojson  site.geojson  watershed.geojson
data/shared/: categories.toml  evidence_status.toml  regions.toml  time_windows.toml
docs/: glossary.md  index.md
docs/explorer/: app.js  index.html  state.js  styles.css
docs/explorer/data/: sample-data.js
docs/explorer/map/: layer-controls.js  leaflet-map.js  legends.js  map-helpers.js  map-view.js  project-layers.js
docs/explorer/render/: evidence-view.js  export-view.js  projects-view.js  render-balance-sheet.js  render-comparison-table.js  render-data-status.js  render-evidence-claims.js  render-evidence-sources.js  render-evidence-status.js  render-flows.js  render-profile-summary.js  render-project-summary.js  render-timeline.js
docs/explorer/ui/: balance-sheet-table.js  evidence-panel.js  header.js  ownership-panel.js  project-selector.js  subtabs.js  summary-panel.js  tabs.js  timeline-panel.js
src/surfacing_mining/: __init__.py  cli.py  config.py
src/surfacing_mining/domain/: __init__.py
src/surfacing_mining/reporting/: __init__.py
src/surfacing_mining/utils/: logging_utils.py
tests/: test_build_balance_sheet.py  test_load_profiles.py  test_load_projects.py  test_project_views.py  test_validate_geojson.py
